# PluginsJamomaUnity

./: .gitignore  .gitmodules  README.md
Creation of the plugins/Windows/Code source/: PluginJamomaUnity.cpp
Linux/: CMakeLists.txt
Linux/src/: PluginJamomaUnity.h  ossia.cpp  ossia.h  ossia_address.cpp  ossia_device.cpp  ossia_domain.cpp  ossia_node.cpp  ossia_protocol.cpp  ossia_utils.hpp  ossia_value.cpp
Linux/src/ossia/: ossia.h  ossia_address.cpp  ossia_device.cpp  ossia_domain.cpp  ossia_protocol.cpp  ossia_utils.hpp  ossia_value.cpp
Linux/src/preset/: preset.cpp  preset.h  preset.hpp
Linux/test/: test_reception.cpp
Linux/test/preset/unit-tests/: unit-tests-c-api.cpp
Linux/unity/: New Terrain.asset  OssiaAttribute.cs  OssiaDevices.cs  OssiaObject.cs  OssiaUnity.cs  Scene1.unity
Linux/unity/ossia/: OssiaAddress.cs  OssiaDevice.cs  OssiaDevices.cs  OssiaNetwork.cs  OssiaProtocol.cs  OssiaUnity.cs  Scene1.unity  Sonopluie.cs
Linux/unity/preset/: LoadPreset.cs  Preset.cs
Linux/unity/unityproject/namespaceapi/: demo-unity.scorejson  deom-unity-2.scorejson
Linux/unity/unityproject/namespaceapi/Assets/: LoadPreset.cs  MobController.cs  New Terrain.asset  OssiaAddress.cs  OssiaDevices.cs  OssiaNode.cs  OssiaObject.cs  OssiaUnity.cs  Preset.cs  Tree 1.prefab  Tree 2.prefab  Tree 3.prefab  Tree 4.prefab  Tree 5.prefab  Tree.prefab  TreeController.cs  preset.json  scene.unity  scene2.unity
Linux/unity/unityproject/namespaceapi/Assets/Plugins/ossia.bundle.old/Contents/: Info.plist
Linux/unity/unityproject/namespaceapi/Assets/Plugins/ossia.bundle.old/Contents/Frameworks/: libAPIJamoma.dylib
Linux/unity/unityproject/namespaceapi/Assets/Plugins/ossia.bundle.old/Contents/Frameworks/jamoma/extensions/: AnalysisLib.ttdylib  DataspaceLib.ttdylib  FunctionLib.ttdylib  Minuit.ttdylib  NetworkLib.ttdylib  System.ttdylib
Linux/unity/unityproject/namespaceapi/Assets/Plugins/ossia.bundle.old/Contents/MacOS/: ossia
Linux/unity/unityproject/namespaceapi/Assets/Plugins/ossia.bundle/Contents/Frameworks/: libAPIJamoma.dylib
Linux/unity/unityproject/namespaceapi/Assets/Plugins/ossia.bundle/Contents/Frameworks/jamoma/: libJamomaFoundation.6.dylib  libJamomaModular.6.dylib
Linux/unity/unityproject/namespaceapi/Assets/Plugins/ossia.bundle/Contents/Frameworks/jamoma/extensions/: AudioEngine.ttdylib  AudioGraphUtilityLib.ttdylib  Automation.ttdylib  Clipper.ttdylib  Crossfade.ttdylib  DictionaryLib.ttdylib  EffectsLib.ttdylib  FFTLib.ttdylib  FilterLib.ttdylib  GeneratorLib.ttdylib  Interval.ttdylib  Loop.ttdylib  MIDI.ttdylib  MatrixProcessingLib.ttdylib  MidiLib.ttdylib  OSC.ttdylib  Plugtastic.ttdylib  ResamplingLib.ttdylib  Scenario.ttdylib  SoundfileLib.ttdylib  SpatLib.ttdylib  TrajectoryLib.ttdylib  WebSocket.ttdylib  WindowFunctionLib.ttdylib
Linux/unity/unityproject/namespaceapi/Assets/Plugins/ossia.bundle/Contents/Frameworks/jamoma/include/: JamomaCoreVersion.h
Linux/unity/unityproject/namespaceapi/Assets/Plugins/ossia.bundle/Contents/Frameworks/jamoma/lib/: libJamomaAudioGraph.6.dylib  libJamomaDSP.dylib  libJamomaGraph.6.dylib  libJamomaScore.6.dylib
Linux/unity/unityproject/namespaceapi/Assets/Plugins/ossia.bundle/Contents/Frameworks/jamoma/share/cmake/Jamoma/: JamomaAudioGraphTargets-debug.cmake  JamomaAudioGraphTargets.cmake  JamomaConfigVersion.cmake  JamomaDSPTargets-debug.cmake  JamomaDSPTargets.cmake  JamomaFoundationTargets-debug.cmake  JamomaFoundationTargets.cmake  JamomaGraphTargets-debug.cmake  JamomaGraphTargets.cmake  JamomaModularTargets-debug.cmake  JamomaModularTargets.cmake  JamomaScoreTargets-debug.cmake  JamomaScoreTargets.cmake
Linux/unity/unityproject/namespaceapi/Assets/Plugins/ossia.bundle/Contents/MacOS/: libAPIJamoma.dylib  ossia
Linux/unity/unityproject/namespaceapi/Assets/PowerUps Vol 1 Free/Materials/: Arrows Green.mat  Coin Silver.mat  Poison Purple.mat  Shield Metal.mat
Linux/unity/unityproject/namespaceapi/Assets/TCZ Cars Free/: example_scene.unity
Linux/unity/unityproject/namespaceapi/Assets/TCZ Cars Free/Models/Materials/: TCZ_MS_09_a.mat
Linux/unity/unityproject/namespaceapi/Assets/TCZ Cars Free/Prefabs/: TCZ_MS_09.prefab
Linux/unity/unityproject/namespaceapi/ProjectSettings/: ProjectSettings.asset
Mac/Code source of the plugin/: PluginJamomaUnity.cpp
Mac/Editor/: JamomaConfigureWindow.cs  MessageListWindow.cs  MessageModifyWindow.cs  ParameterCreateWindow.cs
Mac/Sources/: PluginJamomaUnity.h
Mac/Template Unity Assets/Editor/: MessageCreateWindow.cs  Messages.cs  (+6 more)
Windows/Code source of the plugin/: PluginJamomaUnity.h
Windows/DLL and TTDLL/: AnalysisLib.ttdll  AudioGraphUtilityLib.ttdll  Automation.ttdll  Clipper.ttdll  Crossfade.ttdll  DataspaceLib.ttdll  DictionaryLib.ttdll  EffectsLib.ttdll  FFTLib.ttdll  FilterLib.ttdll  FunctionLib.ttdll  GeneratorLib.ttdll  Interval.ttdll  MIDI.ttdll  MatrixProcessingLib.ttdll  Max.ttdll  MidiLib.ttdll  Minuit.ttdll  NetworkLib.ttdll  OSC.ttdll  Plugtastic.ttdll  ResamplingLib.ttdll  Scenario.ttdll  SpatLib.ttdll  System.ttdll  TrajectoryLib.ttdll  WebSocket.ttdll  WindowFunctionLib.ttdll
Windows/Editor/: CommonFunctions.cs  MyBuildPostprocessor.cs  ParameterCreateWindow.cs  ParameterListWindow.cs  ParameterModifyWindow.cs  ReturnCreateWindow.cs  Returns.cs
Windows/Scripts/: PluginJamomaUnity.cs
Windows/lib/: AnalysisLib.lib  AudioGraphUtilityLib.lib  Clipper.lib  Crossfade.lib  DictionaryLib.lib  EffectsLib.lib  FilterLib.lib  FunctionLib.lib  GeneratorLib.lib  JamomaAudioGraph.lib  JamomaDSP.lib  JamomaGraph.lib  JamomaModular.lib  JamomaScore.lib  Max.lib  SpatLib.lib  System.lib  WebSocket.lib
(+24 files in other folders)
